# wiki-forge

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
core/: primitive.yaml
core/files/: AGENTS.md  CORE.md  frontmatter.schema.yaml
docs/: CHARTER.md  CONVENTIONS.md  README.md  ROADMAP.md
docs/_templates/: adr.md  plan.md  rfc.md  spec.md  state.json
docs/adr/: 0001-stdlib-rendering-not-jinja.md  0002-journal-as-state-truth.md  0003-managed-regions-for-shared-files.md  0004-drift-detection-and-proposal-flow.md  0005-pydantic-for-disk-bound-schemas.md  0006-additive-managed-region-contributions.md  0007-shared-infra-config-files-at-vault-root.md  0008-init-adopt-ownership-policy.md  0009-headless-claude-invocation-contract.md  0010-agent-passthrough-via-claude-agent-flag.md
docs/architecture/: overview.md
docs/knowledge/: README.md  patterns.jsonl
docs/product/: roadmap.md
docs/research-providers/: gemini.md  perplexity.md  semantic-scholar.md
docs/rfc/: 0001-v2-architecture.md  0002-adopt-agent-ready-repo-tooling.md  0003-scheduling-and-autonomous-execution.md  0004-agent-identity-primitives.md
examples/: README.md  regenerate.py
examples/conflict-pending/: AGENTS.md  CORE.md  frontmatter.schema.yaml  identity.md
examples/family-mini/: AGENTS.md  CORE.md  frontmatter.schema.yaml
examples/work-os-mini/: AGENTS.md  CORE.md  frontmatter.schema.yaml
llm_wiki_kit/: __init__.py  __main__.py  cli.py  doctor.py  errors.py  git_init.py  ingest.py  install.py  journal.py  managed_regions.py  models.py  primitives.py  recipes.py  render.py  run.py  search.py  upgrade.py  write_helper.py
llm_wiki_kit/research/: __init__.py  dispatch.py  http.py
recipes/: family.yaml  personal.yaml  work-os.yaml
tests/: conftest.py
tests/evalkit/: __init__.py
tests/evals/: README.md  conftest.py  test_self_check.py
tests/integration/: conftest.py  test_cli_run_exec.py  test_eval_fixtures.py  test_examples_regenerable.py  test_family_recipe.py  test_git_init.py  test_personal_recipe.py  test_tutorials.py  test_verbose_flag.py  test_wheel_contents.py  test_wheel_install_end_to_end.py  test_wiki_add.py  test_wiki_doctor.py  test_wiki_ingest.py  test_wiki_init.py  test_wiki_init_git.py  test_wiki_init_primitives.py  test_wiki_lock.py  test_wiki_research.py  test_wiki_resolve.py  test_wiki_run.py  test_wiki_search.py  test_wiki_upgrade.py  test_work_os_recipe.py
tests/unit/: test_cli.py  test_cli_kit_root.py  test_content_type_snippets.py  test_doctor.py  test_errors.py  test_evalkit_ci.py  test_evalkit_docs.py  test_evalkit_layout.py  test_evalkit_marker.py  test_evalkit_research_registry.py  test_evalkit_runner.py  test_ingest_routing.py  test_init.py  test_install.py  test_install_skill_closure.py  test_journal.py  test_journal_readers.py  test_managed_region_resolve.py  test_models.py  (+19 more)
tools/: RALPH.md  check-done.py  install-skill.py  lint-agent-artifacts.sh  lint-agents-md.sh  lint-knowledge.sh  lint-skill-deps.sh  ralph.sh
(+232 files in other folders)
